[package]
name = "maw"
version = "0.18.2"
edition = "2024"
description = "A simple and efficient web framework for Rust."
license = "MIT"
repository = "https://github.com/Srlion/maw"
authors = ["Srlion <srlion32@gmail.com>"]

[features]
default = []

xml = ["dep:quick-xml"]
minijinja = ["dep:minijinja", "dep:erased-serde", "dep:minijinja-autoreload"]

middleware-cookie = ["dep:cookie", "dep:postcard", "dep:base64"]
middleware-session = ["middleware-cookie", "serde/derive"]
middleware-logging = []
middleware-csrf = ["middleware-cookie", "dep:rand", "dep:constant_time_eq"]
middleware-catch_panic = ["dep:pin-project-lite"]
middleware-body_limit = []

middleware = [
    "middleware-cookie",
    "middleware-session",
    "middleware-logging",
    "middleware-csrf",
    "middleware-catch_panic",
    "middleware-body_limit",
]

full = ["xml", "minijinja", "middleware"]

[dependencies]
matchit = "0.9.1"
mime_guess = "2.0.5"
smol_str = "0.3.5"
serde_urlencoded = "0.7.1"
http-body-util = "0.1.3"
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
bytes = "1.11.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["signal", "net"] }
http = "1.4.0"
serde = { version = "1.0.228", features = [] }
hyper = { version = "1.8.1", features = [] }
hyper-util = { version = "0.1.19", features = [
    "server",
    "server-graceful",
    "http1",
] }
paste = "1.0.15"
minijinja = { version = "2.15.1", optional = true, features = [
    "loader",
    "builtins",
    "json",
] }
minijinja-autoreload = { version = "2.15.1", optional = true }
serde_json = "1.0.149"
quick-xml = { version = "0.39.0", features = ["serialize"], optional = true }
erased-serde = { version = "0.4.9", optional = true }
cookie = { version = "0.18.1", features = [
    "private",
    "signed",
], optional = true }
futures-util = { version = "0.3.31", default-features = false }
http-body = "1.0.1"
tokio-util = "0.7.18"
rand = { version = "0.9.2", optional = true, default-features = false, features = [
    "thread_rng",
] }
constant_time_eq = { version = "0.4.2", optional = true }
pin-project-lite = { version = "0.2.16", optional = true }
postcard = { version = "1.1.3", optional = true, features = ["use-std"] }
base64 = { version = "0.21.3", optional = true }
